@@ -1,5 +1,8 @@
 2000-12-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
+	* fn_select.c, fn_tag.c, ftp.c, tag.c: remove unnecessary casts of
+	basename to char *.
+
 	* tparam.c: include ANSI C headers unconditionally.
 
 	* fn_select.c, fn_tag.c, ftp.c, tag.c: sort headers, include
